--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.26.0",
@@ -15,6 +16,8 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
+    "react-redux-loading": "^4.6.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "react-usestateref": "^1.0.8",
